Committing a new multi-threaded script for running optimization over the pages.
Signed-off-by: Andrew Hankinson <andrew.hankinson@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ classifier_glyphs_533.xml
 /gamera/toolkits/.DS_Store
 /.DS_Store
 .DS_Store
+
+/bin/classifier_weights.xml
+/bin/optimized_classifier.xml
